# SYSC4415_A03

./: .gitignore  README.md
A3/: SYSC4415_W26_A3_v2.ipynb
A3/llm_connector/: LICENSE  pyproject.toml
A3/llm_connector/examples/: example_providers_standalone.py
A3/llm_connector/examples/sandboxed/: README.md  example_pip.py
A3/llm_connector/llm_connector/: __init__.py  cli.py  connector.py
A3/llm_connector/llm_connector/adapters/: __init__.py  adapter.py  anthropic_adapter.py  google_adapter.py  groq_adapter.py  local_adapter.py  openai_adapter.py  openrouter_adapter.py  vertex_adapter.py
A3/llm_connector/llm_connector/helpers/: __init__.py  llm_settings.py  logger_config.py  path_resolver.py  pricing.py  security_settings.py
A3/llm_connector/tests/: conftest.py  test_integration_connector.py  test_unit_connector.py
T10/: T10_SimpleAgent.ipynb
